# Cracking-The-Coding-Interview

./: .gitignore  pyproject.toml  setup.cfg
01_arrays_and_strings/: 01_is_unique.py  02_check_permutation.py  03_urlify.py  04_palindrome_permutation.py  05_one_away.py  06_string_compression.py  07_rotate_matrix.py  08_zero_matrix.py  09_string_rotation.py
02_linked_lists/: 01_remove_dups.py  02_return_kth_to_last.py  03_delete_middle_node.py  04_partition.py  05_sum_lists.py  06_palindrome.py  07_intersection.py  08_loop_detection.py
03_stacks_and_queues/: 02_stack_min.py  03_stack_of_plates.py  04_queue_via_stacks.py  05_sort_stack.py  06_animal_shelter.py  queue.py
04_trees_and_graphs/: 01_route_between_nodes.py  02_minimal_tree.py  03_list_of_depths.py  04_check_balanced.py  05_validate_bst.py  06_successor.py  07_build_order.py  08_first_common_ancestor.py  09_bst_sequences.py  10_check_subtree.py  11_random_node.py  12_paths_with_sum.py  binary_search_tree.py  tree.py
05_bit_manipulation/: 01_insertion.py  03_flip_bit_to_win.py  05_debugger.py  06_conversion.py  07_pairwise_swap.py  08_draw_line.py
08_recursion_and_dynamic_programming/: 01_triple_step.py  02_robot_in_a_grid.py  06_towera_of_hanoi.py  07_permutation_without_dups.py  09_parens.py  13_stack_of_boxes.py  14_boolean_evaluation.py
1. Arrays and Strings/: 1_Is_Unique.py  4_Palindrome_Permutation.py  8_Zero_Matrix.py
10. Sorting and Searching/: 11_Peaks_And_Valleys.py  2_Group_Anagrams.py  3_Search_In_Rotated_Array.py  4_Sorted_Search_No_Size.py  6_Sort_Big_FIle.py  7_Missing_Int.py  (+4 more)
(+35 files in other folders)
