[tool.poetry]
name = "cracking-the-coding-interview"
version = "0.1.0"
description = "Python solutions to the popular 'Cracking The Coding Interview' book."
authors = ["Darshan A S <itisdarshan@gmail.com>"]
readme = "README.md"
packages = [{ include = "cracking_the_coding_interview" }]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pep8 = "^1.7.1"
rope = "^1.5.1"
pylint = "^2.15.7"
flake8 = "^6.0.0"
bandit = "^1.7.4"
mypy = "^0.991"
pydocstringformatter = "^0.7.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.bandit]
skips = ["B101", "B601"]
